Fixer container spacing and logo nav links

--- a/css/about.css
+++ b/css/about.css
@@ -101,7 +101,7 @@ h3 > i {
 /* My Clients */
 #my-clients{
 	text-align: center;
-	margin: 8rem uato;
+	margin-bottom: 10rem;
 }
 
 #my-clients .clients-grid{
