--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ p {
 }
 
 section.container {
-	margin: 6rem auto;
+	margin: 7rem auto;
 }
 
 .curved {
